Bug fix: hide border of sidebar when collapsed (display:none)

--- a/css/leaflet-sidebar-tabless.css
+++ b/css/leaflet-sidebar-tabless.css
@@ -6,7 +6,9 @@
   overflow: hidden;
   z-index: 2000; }
   .leaflet-sidebar.collapsed {
-    width: 0; }
+    display: none;
+    width: 0;
+  }
   @media (min-width: 768px) {
     .leaflet-sidebar {
       top: 10px;
